--- a/public/angular/views/frontPage.html
+++ b/public/angular/views/frontPage.html
@@ -69,7 +69,7 @@
         <div ng-repeat="question in allQuestions | limitTo: 1">
             <p class="questions"> Question # {{$index +1}}: {{question.question[0]}} </p>
          </div>                                
-                    <div class="col-md-4 bottomMargin" ng-repeat="answer in allAnswers">
+                    <div class="col-md-4 container-fluid bottomMargin" ng-repeat="answer in allAnswers">
                       <p class="answers"
                         ng-class="{'button': !isActive, 'button active': isActive}"
                         ng-init="isActive = false"
