Changes to answer fields and submit form style

--- a/public/styles/front-page.css
+++ b/public/styles/front-page.css
@@ -10,7 +10,11 @@ body{
 }
 .headerText{
     margin-top: 60px;
+    line-height: 14px;
     margin-bottom: 60px;
+}
+#mainText{
+    line-height: 26px !important;
 }
 #mainText, #subText{
     color: #000;
@@ -73,35 +77,42 @@ End of placeholder styling
     border: 0px;
     outline: none;
 }
+
+.questionsContainer{
+    position: relative;
+}
 .questions{
-    z-index: 2;
-    position: absolute;
-    clear: both;
+    background-color: #fff;
+    width: 400px ;
+    height: 60px;
+    z-index: 999;
+    /*clear: both;
     background-color: none;
     height: 20px;
-    width: 400px;
+    width: 400px;*/
     color: #000000;
     font-size: 12;
-    line-height: 20px;
+   /* margin-bottom: 120px;*/
+   /* line-height: 20px;
     height: 30px;
-    text-overflow: ellipsis;
-    margin-top: -60px;
-    margin-bottom: 20px;
+    
+    margin-top: -60px;*/
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: -20px;
     padding-left: 20px;
+    padding-right: 100px;
 }
 
+
+
 .answers{
-    z-index: 0;
-    position: relative;
-    clear: left;
-    float: left;
-    background-color: white;
+    background-color: #fff;
     height: 120px;
     width: 400px;
     color: #000000;
     font-size: 12;
     padding: 20px;
-    padding-top: -100px;
     line-height: 20px;
     /*max-height: 32px;*/
     height: 100px;
@@ -113,10 +124,10 @@ End of placeholder styling
 }
 .active{
      overflow: visible;
-     min-height: 1600px;
+     overflow-y: scroll;
+     min-height: 600px;
      z-index: 500;
     background-color: #fff;
-    width: 460px;
     color: #000000;
     font-size: 12;
     padding: 20px;
@@ -149,3 +160,4 @@ End of placeholder styling
 .bottomMargin{
     margin-bottom: 60px;
 }
+
