--- a/views/index.html
+++ b/views/index.html
@@ -48,16 +48,16 @@
 						
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse" id="menuBtn">
 						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
+						<span class="icon-bar myBar"></span>
+						<span class="icon-bar myBar"></span>
+						<span class="icon-bar myBar"></span>
 					</button>
-						<img src="../images/ibm-design-icons-user/user_32.png" class="pull-right userStyle"/>
-						<a class="navbar-brand" href="#">No logo</a>
+						<img src="../images/ibm-design-icons-user/ico_user.png" class="pull-right userStyle"/>
+						<h3 id="logo">IBM <b>IBP Support Site</b></h3>
 					</div>
 					<div class="collapse navbar-collapse nav-collapse"> 	
 						<ul class="nav navbar-nav navbar-right">
-							<li class="active"><a href="#/main" data-target=".nav-collapse">Main</a></li>
+							<li><a href="#/main" data-target=".nav-collapse">Main</a></li>
 							<li><a href="#/submit/new-ticket"  data-target=".nav-collapse">Submit ticket</a></li>
 							<li><a href="#/show/all-tickets" data-target=".nav-collapse">All tickets</a></li>
 						</ul>
@@ -74,7 +74,7 @@
 	</div>
 
 	<footer class="container-fluid text-center footerStyle">
-  		<p class="byNode">Powered by Node.js</p>
+  		<p class="byNode">Powered by <b>IBM Watson</b></p>
 	</footer>
 
 	<script>
