--- a/public/angular/views/frontPage.html
+++ b/public/angular/views/frontPage.html
@@ -18,7 +18,7 @@
         <div class="form-group">
             <!--<h3>Search for answer</h3>-->
             <input
-                type="text"
+                type="submt"
                 id="searchAnswer"
                 class="form-control"
                 name="searchAnswer"
@@ -28,7 +28,8 @@
                 required>
             </input>
             <br/>
-            <div
+            <div 
+                
                 class="searchBtn pull-right"
                 ng-click="search(question)">
                 Submit <span class= "searchPadding"><img src="../images/ibm-design-icons-forward/forward_32_blue.png" style="height: 24px; width:24px"></span>
@@ -65,22 +66,33 @@
 <div class="row-fluid backgroundStyle">
     <div class="col-md-12 bottomMargin">
     <!--<h3>{{ allAnswers.length }} answers:</h3>-->
-  
-        <div ng-repeat="question in allQuestions | limitTo: 1">
-            <p class="questions"> Question # {{$index +1}}: {{question.question[0]}} </p>
-         </div>                                
-                    <div class="col-md-4 container-fluid bottomMargin" ng-repeat="answer in allAnswers">
-                      <p class="answers"
-                        ng-class="{'button': !isActive, 'button active': isActive}"
-                        ng-init="isActive = false"
-                        ng-click="isActive = !isActive"
-                      
-                      
-                      ><span class="answerLabel"> Answer # {{ $index + 1}}: </span> {{ answer.answer[0] }}</p>
-                      <p class="readMore">
-                        <button class="readMoreBtn" ng-click="isActive = !isActive">Read more..</button>
-                      </p> 
-                    </div>
+                    
+                 
+
+                                  
+                      <div  class = "questionContainer">  
+                          
+                          <div >  
+                            <div class="col-md-4 container-fluid bottomMargin"  ng-repeat="answer in allAnswers"" ng-init="objectIndex = $index" >  
+                                <div   ng-init="boxIndex = $index"> <!--| limitTo: 3-->
+                                    <p class="questions" > <b>Question # {{$index +1}}:</b> {{answer.question[0]}} </p>
+                                </div> 
+                                <p class="answers"
+                                    ng-class="{'button': !isActive, 'button active': isActive}"
+                                    ng-init="isActive = false"
+                                    ng-click="isActive = !isActive"
+                            
+                                >  
+                                    <span class="answerLabel"> Answer # {{ $index + 1}}: </span> {{ answer.answer[0] }}
+                                </p>
+                                <p class="readMore">
+                                    <button class="readMoreBtn" ng-click="isActive = !isActive">Read more..</button>
+                                </p> 
+                            </div>         
+                        </div>  
+                              
+                    
+                 </div>
     </div>
 </div>
 
